--- a/WindowsUIWalla/ManageWalla/App.xaml
+++ b/WindowsUIWalla/ManageWalla/App.xaml
@@ -2,13 +2,15 @@
              xmlns:walla="clr-namespace:ManageWalla"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:ShaderEffectLibrary="clr-namespace:ShaderEffectLibrary;assembly=ShaderEffectLibrary"
              StartupUri="MainTwo.xaml">
+    
     <Application.Resources>
         
         <Style x:Key="styleButton" TargetType="{x:Type Button}">
             <Setter Property="Background" Value="#FFE6D4D4" />
             <Setter Property="Margin" Value="2" />
-            <!--<Setter Property="Padding" Value="4" />-->
+            <Setter Property="Padding" Value="0" />
             <Setter Property="BorderBrush" Value="#FF616161" />
             <Setter Property="Foreground" Value="#FFB82F5A" />
             <Style.Triggers>
@@ -165,6 +167,68 @@
                 <Trigger Property="IsChecked" Value="true">
                     <Setter Property="Opacity" Value="1.0" />
                 </Trigger>
+            </Style.Triggers>
+        </Style>
+
+
+        <Style x:Key="PhotoListStyle" TargetType="{x:Type ListBox}">
+            <Setter Property="Padding" Value="0" />
+            <Setter Property="Margin" Value="0" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ListBox}">
+                        <ScrollViewer 
+								VerticalScrollBarVisibility="Auto" 
+								HorizontalScrollBarVisibility="Disabled">
+                            <WrapPanel 
+									IsItemsHost="True" 
+									Orientation="Horizontal" />
+                        </ScrollViewer>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+        <Style x:Key="PhotoListItem" TargetType="{x:Type ListBoxItem}">
+            <Setter Property="FocusVisualStyle" Value="{x:Null}" />
+            <!--
+        <Setter Property="MaxHeight" Value="100" />
+        <Setter Property="MinHeight" Value="100" />
+        -->
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="HorizontalAlignment" Value="Center" />
+            <Setter Property="BorderBrush" Value="#FF6C8DD0" />
+            <Setter Property="BorderThickness" Value="2" />
+            <Setter Property="Margin" Value="3" />
+            <Setter Property="Padding" Value="0" />
+
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="true">
+                    <Setter Property="Effect">
+                        <Setter.Value>
+                            <ShaderEffectLibrary:BloomEffect BaseIntensity="1" BaseSaturation="1" BloomIntensity="1" BloomSaturation="1" />
+                        </Setter.Value>
+                    </Setter>
+                </Trigger>
+
+                <Trigger Property="IsSelected" Value="true">
+                    <Setter Property="BorderBrush" Value="Black" />
+                    <Setter Property="Effect">
+                        <Setter.Value>
+                            <ShaderEffectLibrary:BloomEffect BaseIntensity="1" BaseSaturation="1" BloomIntensity="1" BloomSaturation="1" />
+                        </Setter.Value>
+                    </Setter>
+                </Trigger>
+
+                <Trigger Property="IsEnabled" Value="false">
+                    <Setter Property="BorderBrush" Value="Pink" />
+                    <Setter Property="Effect">
+                        <Setter.Value>
+                            <ShaderEffectLibrary:ContrastAdjustEffect Contrast="0.5"  />
+                        </Setter.Value>
+                    </Setter>
+                </Trigger>
+
             </Style.Triggers>
         </Style>
 
